<resources>
    <string name="app_name">scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_now">Scan Now</string>
    <string name="start_time">Start Time</string>
    <string name="location_id">Location Id</string>
    <string name="location_detail">Location Detail</string>
    <string name="price_per_min">Price per Min</string>
    <string name="session_in_progress">Session in Progress</string>
    <string name="end_session">End Session</string>
    <string name="reset_session">Reset Session</string>
    <string name="total_cost">Total Cost</string>
    <string name="end_time">End Time</string>
    <string name="session_time">Session Time</string>
    <string name="scanner">SCANNER</string>
    <string name="session_timer">"Library Session is in Progress -> %s"</string>
</resources>